# cpa-billing-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
cpa_billing/: __init__.py  bot.py  cli.py  config.py  database.py  domain.py  migrate.py  models.py  security.py  services.py  web.py
deployment/: Caddyfile.billing
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  api.test.js  charts.js  main.js  router.js
frontend/src/components/: LoadingState.vue  MetricRail.vue  PageHeader.vue  SystemPulse.vue  TimeRangeSelector.vue
frontend/src/layouts/: AdminLayout.test.js  AdminLayout.vue  UserLayout.test.js  UserLayout.vue
frontend/src/lib/: autoRefresh.js  autoRefresh.test.js  debounce.js  debounce.test.js  format.js  pricing.js  pricing.test.js  query.js  query.test.js  timeRange.js  (+1 more)
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_admin_web_sessions.py  0003_request_history_indexes.py  0004_live_billing_rules.py  0005_manual_usage_adjustments.py  0006_editable_manual_usage.py  0007_reasoning_effort.py  0008_service_tier_provenance.py  0009_read_only_key_sessions.py  0010_dashboard_query_indexes.py
static/: app.css  app.js
templates/: action_pending.html  admin.html  admin_login.html  base.html  dashboard.html  error.html  login.html  me.html  user.html
tests/: conftest.py  test_bot.py  test_domain.py  test_migration.py  test_security.py  test_services.py  test_web.py
(+20 files in other folders)
