[project]
name = "cpa-billing-system"
version = "0.1.0"
description = "CPAMP-backed monthly cost allocation and self-service dashboard"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "matplotlib>=3.8,<4",
  "python-multipart>=0.0.9,<1",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
cpa-billing = "cpa_billing.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cpa_billing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
